<resources>
    <string name="app_name">UmaEventChecker</string>
    <string name="message_main_idle">チェッカーを開始する</string>
    <string name="message_main_running">バッググランドで実行中…</string>
    <string name="button_start">start</string>
    <string name="button_stop">stop</string>
    <string name="notification_text">ゲーム画面を監視・イベントを検索中</string>
    <string name="notification_action_stop">終了</string>
    <string name="data_repository_base_url">https://raw.githubusercontent.com/Seo-4d696b75/uma-event-data/main/</string>
    <string name="data_update_title">データ更新</string>
    <string name="data_update_message">新しいデータがあります. ダウンロードしますか？</string>
    <string name="data_update_version">バージョン：%d</string>
    <string name="data_update_size">サイズ：　%s</string>
    <string name="data_update_dialog_button_positive">ダウンロード</string>
    <string name="data_update_dialog_button_negative">キャンセル</string>
    <string name="error_data_not_found">データがありません</string>
    <string name="update_status_data">ダウンロード中…</string>
    <string name="update_status_icons">画像をダウンロード中…%d/%d</string>
    <string name="update_progress">%d %%</string>
    <string name="inspector_dialog_title">検証メニュー</string>
    <string name="inspector_dialog_close">閉じる</string>
    <string name="inspector_tab_monitor">監視状態</string>
    <string name="inspector_tab_search">手動検索</string>
    <string name="inspector_tab_setting">設定</string>
    <string name="event_choice_dialog_title">イベントの選択肢</string>
    <string name="event_choice_dialog_close">閉じる</string>
    <string name="setting_threshold_title">文字列検索の閾値  %1$.1f</string>
    <string name="setting_threshold_description">OCRで検出したイベントタイトルの類似度検索の閾値を指定します.1に近いほどタイトルの合致度が上がりますがOCRの検出精度が低いと検索結果に出てこない場合があります.</string>
    <string name="setting_interval_title">検索の時間間隔  %1$dms</string>
    <string name="setting_interval_description">画像をキャプチャしてイベントを検出・検索する最低の間隔をミリ秒で指定します.間隔を短くすると検索の反応は早くなりますが消費電力が増加します.</string>
    <string name="setting_interval_format">%1$dms</string>
</resources>
