...
        <ImageView
            android:id="@+id/image_icon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_uma_symbol"
            app:layout_constraintBottom_toTopOf="@id/text_main"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_main"
...
            android:text="@{viewModel.runningCapture ? @string/button_stop : @string/button_start}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_main" />

        <ProgressBar
            android:id="@+id/progress_main"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.loading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
...
